# Sentinel

./: .env.example  .gitignore  README.md  docker-compose.microservices.yml  docker-compose.yml  your-brain.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  web_console.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  clusters.py  governance.py  health.py  recommendations.py  resources.py  router.py
backend/app/core/: config.py  logging.py  rbac.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit.py  cluster.py  namespace.py  recommendation.py  user.py
backend/app/schemas/: auth.py  cluster.py  namespace.py  recommendation.py  resource.py
backend/app/services/: azure_client.py  azure_credentials.py  azure_resource_id.py  demo_data.py  governance_engine.py  kubernetes_client.py  optimization_engine.py  prometheus_client.py
backend/tests/: test_health.py  test_optimization_engine.py
deploy/nginx/: sentinel-single-host.conf
docs/: api.md  architecture.md  deployment.md  diagrams.md  entra-local-login.md  entra-single-app.md  microservices.md
frontend/: .env.local.example  Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  queries.ts  store.ts  types.ts
frontend/tests/: dashboard.spec.ts
helm/aks-governance/: Chart.yaml  values.yaml
k8s/: demo-namespaces.yaml
services/governance-service/: Dockerfile
services/identity-service/: Dockerfile
(+54 files in other folders)
