[project]
name = "aks-governance-api"
version = "0.1.0"
description = "Azure-native AKS governance and resource optimization API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "redis>=5.0.8",
  "httpx>=0.27.0",
  "pyjwt[crypto]>=2.9.0",
  "python-multipart>=0.0.9",
  "structlog>=24.4.0",
  "prometheus-client>=0.20.0",
  "PyYAML>=6.0.2",
  "azure-identity>=1.17.1",
  "azure-mgmt-containerservice>=31.0.0",
  "azure-mgmt-resource>=23.1.1",
  "azure-mgmt-resourcegraph>=8.0.0",
  "kubernetes>=30.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.7",
  "mypy>=1.11.1",
  "types-PyYAML>=6.0.12.20240808",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
